# toodeloo

./: .gitignore  Cargo.toml  README.md
.sqlx/: query-070190f23014fd75a5ff2262b07617e71a92aeca8427cfb432f8feaad3e09fdf.json  query-121d42c50b27455d85671889dfdb4965b9d013b5611834d0dbfbfbc2a90c2f12.json  query-1b144dcae984cab34bd4bd6a5dd02920a5300e2970def33f2733de45930ac529.json  query-1d2d06c6d5d14628d49ec12ab1cf857c31c60573dbefeaa26a9f98f9023f53ad.json  query-26961a807d201949d52baced063ad272af1c7ef699c98c218b7677095ccfa398.json  query-3d4622e9b559720dcb3c19e5e2da6c30c437ceb96f3970f795d8fc4f20e3f3ee.json  query-4466ba992eabc6cf4c5455aea0d3bfb831aa41310a1959c83023b594d2dc7336.json  query-47b39566cbaf6000a4cd98a7ffdc54f9ba1ae2ea99bd161b9f17af496410c1f0.json  query-4d35a185e687fa4082021edb808f23bf4f1c6d769b9adb2a2492e965c57e11ff.json  query-4f79b76cc5c73ce98969275b8bfd59e85ec930d231c5670d2f6bdd2790862282.json  query-4fa3f828f800684b11cdbe7cd8f5e1478a7e1bc71ac6c03823f08d9dae0883ad.json  query-50d37ac240136d673978eb25963221c659898d21fba29648ed8d5c7ecf52ae53.json  query-56c9c71ed0ee9ca5a32d69d85280fa4d5063fa51f6855fb7c6f6de2ab4710a97.json  query-5d0c2218e604d83db7b3c69d7cf7d9d83606c70e551bc0816478227c94d6f7f6.json  query-75f29492e2267002ff36fd9f7846937815415b717b3112eda60a412cdd011b9c.json  query-7b24ed3d607fb8f8332c4a5ef92a97d768aadb693dcb7580ef11b8413ac73630.json  query-88bb5045c17a027c46fc9d80ac6240a0bc8996b805963405213aeff43b51b6ba.json  query-8bb4eab151b4d05a7a77a04d80e460bc14bad2382f2fc1765e99627f311755ee.json  query-8dcc870508f1b464ebb36c91710e2c6729f0c22c61c74df44665a3500043cad0.json  query-a636cf09439e4932ac0162c9217abc657686cf543d50494b4e5ab7a5c7091e34.json  query-a89d45908479c7654d464f7d212a33e3369c3aca98e013fcd8a2d2ee6294e815.json  (+7 more)
core/: Cargo.toml
core/src/: lib.rs  list.rs  tank_traits.rs  task.rs  timing.rs  token.rs  user.rs
frontend-react/: README.md  index.html  (+2 more)
server/: Cargo.toml
server/src/: auth.rs  main.rs  tank.rs
server/src/routes/: mod.rs  users.rs
server/src/tank/: mod.rs
server/src/tank_pg/: mod.rs  traits_impl.rs
server/src/tank_sqlite/: list_impl.rs  mod.rs  task_impl.rs  traits_impl.rs  user_impl.rs
tank/: Cargo.toml  README.md  setup_db.sh
tank/migrations/: 20250508124959_create_tables.sql
tank/pg-docker/: compose.yaml
tank/src/: lib.rs
tank/src/pg/: .env  lists.rs  mod.rs  tasks.rs  token.rs  users.rs
tank/src/sqlite/: list_impl.rs  mod.rs  task_impl.rs  user_impl.rs
(+70 files in other folders)
