[package]
name = "toodeloo-tank"
version = "0.1.0"
edition = "2024"

[dependencies]
toodeloo-core = { path = "../core" }
tokio = { version = "1.45.0", features = ["full"] }
uuid = { version = "1.16.0" }
sqlx = { version = "0.8.5", features = ["postgres", "runtime-tokio-rustls", "uuid"] }
anyhow = "1.0.98"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
